--- a/android/res/values/games-ids.xml
+++ b/android/res/values/games-ids.xml
@@ -3,11 +3,6 @@
 
     <string name="app_id">289981190602</string>
     <string name="package_name">co.aeons.zombie.shooter</string>
-    <string name="achievement_kill_5_enemies">CgkIs8TFzMUHEAIQAw</string>
-    <string name="achievement_kill_10_enemies">CgkIs8TFzMUHEAIQBA</string>
-    <string name="achievement_kill_15_enemies">CgkIs8TFzMUHEAIQBQ</string>
-    <string name="achievement_win_a_multiplayer_dm">CgkIs8TFzMUHEAIQBg</string>
-    <string name="achievement_kill_100_enemies">CgkIs8TFzMUHEAIQBw</string>
-    <string name="leaderboard_highscore">CgkIs8TFzMUHEAIQAg</string>
+    <string name="leaderboard_id">CgkIm5z9sJkQEAIQAQ</string>
 
 </resources>
